Projects, Education 추가

--- a/_config.yml
+++ b/_config.yml
@@ -68,7 +68,7 @@ content:
         title: Ahnlab
         sub_title: Server Developer
         caption: 2022.10 ~ 현재
-        link: https://www.ahnlab.com/ko
+        link: https://www.ahnlab.com
         quote: >
           Short description of the company (optional)
         description: | # this will include new lines to allow paragraphs
@@ -120,26 +120,41 @@ content:
       - layout: left
         border: weak  # Value of `weak` will display a weak border below this item. # Any
         # other value (or no value) means no border will be displayed
-        title: Project name
-        link: Link to project (eg. sproogen.github.io/modern-resume-theme)(optional)
-        link_text: Link Text
-        additional_links:
-          - title: Github page for project (eg. sproogen/modern-resume-theme)
-            icon: fab fa-github
-            url: Link to project (eg. sproogen.github.io/modern-resume-theme)(optional)
-          - title: Github page for project (eg. sproogen/modern-resume-theme)
-            icon: fab fa-github
-            url: Link to project (eg. sproogen.github.io/modern-resume-theme)(optional)
-        quote: >
-          Short overview of the project (optional)
+        title: pipiolo-springboot2-webservice
+        link: Pipi-Olo/pipiolo-springboot2-webservice
+#        link_text: Link Text
+#        additional_links:
+#          - title: Github page for project (eg. sproogen/modern-resume-theme)
+#            icon: fab fa-github
+#            url: Link to project (eg. sproogen.github.io/modern-resume-theme)(optional)
+#          - title: Github page for project (eg. sproogen/modern-resume-theme)
+#            icon: fab fa-github
+#            url: Link to project (eg. sproogen.github.io/modern-resume-theme)(optional)
+#        quote: >
+#          Short overview of the project (optional)
         description: | # this will include new lines to allow paragraphs
-          Description about the work on/with the project
-  - title: A Little More About Me
-    layout: text
-    content: | # this will include new lines to allow paragraphs
-      This is where you can write a little more about yourself. You could title this section **Interests** and include some of your other interests.
-
-      Or you could title it **Skills** and write a bit more about things that make you more desirable, like *leadership* or *teamwork*
+          * 프로젝트 Beyond 이동욱 저자 - '스프링 부트와 AWS로 혼자 구현하는 웹 서비스' 
+          * AWS 을 이용한 서버 운영 및 Code Deploy 를 통한 무중단 배포
+  - title: Education
+    layout: list
+    content:
+      - layout: left
+        title: inflearn-sprig
+#        sub_title: Server Developer
+        caption: 2022.04 ~ 2022.10
+#        link:
+        quote: >
+          Java Spring Web Backend
+        description: | # this will include new lines to allow paragraphs
+          * Java JPA & Spring Data JPA, Querydsl 교육
+          * Spring Boot, Spring MVC 등 Spring 교육
+      - layout: left
+        title: 중앙대학교 컴퓨터공학부 졸업
+#        sub_title:
+        caption: 2015.03 ~ 2019.02
+        link: https://www.cau.ac.kr
+#        quote: >
+#        description: | # this will include new lines to allow paragraphs
 
 # Footer
 footer_show_references: true
