--- a/_config.yml
+++ b/_config.yml
@@ -121,12 +121,12 @@ content:
         border: weak  # Value of `weak` will display a weak border below this item. # Any
         # other value (or no value) means no border will be displayed
         title: pipiolo-springboot2-webservice
-        link: Pipi-Olo/pipiolo-springboot2-webservice
+#        link:
 #        link_text: Link Text
-#        additional_links:
-#          - title: Github page for project (eg. sproogen/modern-resume-theme)
-#            icon: fab fa-github
-#            url: Link to project (eg. sproogen.github.io/modern-resume-theme)(optional)
+        additional_links:
+          - title: Pipi-Olo/pipiolo-springboot2-webservice
+            icon: fab fa-github
+            url: https://github.com/Pipi-Olo/pipiolo-springboot2-webservice
 #          - title: Github page for project (eg. sproogen/modern-resume-theme)
 #            icon: fab fa-github
 #            url: Link to project (eg. sproogen.github.io/modern-resume-theme)(optional)
