site favicon 설정

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site
 repository: Pipi-Olo/Pipi-Olo.github.io
-# favicon: Directory of your favicon (eg. images/favicon.ico)(optional)
+favicon: images/favicon.png
 
 # Content configuration version
 version: 2
