--- a/_config.yml
+++ b/_config.yml
@@ -34,10 +34,10 @@ linkedin_username: 문규환
 #googlescholar_username: D847cGsAAAAJ
 
 # Additional icon links
-#additional_links:
-#- title: Link name
-#  icon: Font Awesome brand icon name (eg. fab fa-twitter) (https://fontawesome.com/icons?d=gallery&s=brands&m=free)
-#  url: Link url (eg. https://google.com)
+additional_links:
+- title: Blog
+  icon: fas fa-bookmark
+  url: https://velog.io/@pipi_olo/
 # - title: another link
 #   icon: font awesome brand icon name (eg. fab fa-twitter) (https://fontawesome.com/icons?d=gallery&s=brands&m=free)
 #   url : Link url (eg. https://google.com)
