--- a/_config.yml
+++ b/_config.yml
@@ -37,7 +37,7 @@ linkedin_username: 문규환
 additional_links:
 - title: Blog
   icon: fas fa-bookmark
-  url: https://velog.io/@pipi_olo/
+  url: https://pipi-olo.github.io/blog
 # - title: another link
 #   icon: font awesome brand icon name (eg. fab fa-twitter) (https://fontawesome.com/icons?d=gallery&s=brands&m=free)
 #   url : Link url (eg. https://google.com)
