기술 설명 영역 수정

--- a/_config.yml
+++ b/_config.yml
@@ -67,7 +67,7 @@ content:
         description: | # this will include new lines to allow paragraphs
           * 행위 데이터를 통한 악성 진단 ML 모델 관련 서비스 개발 및 운영
           * Milvus, ZooKeeper & Kafka, 빌드 머신 담당자
-          * Kubernetes & Helm 기반 서비스 개발 및 운영
+          * Docker & Kubernetes & Helm 기반 서비스 개발 및 운영
   - title: Technology
     layout: list
     content:
@@ -93,8 +93,6 @@ content:
           * Scala
             * Finagle
             * SBT
-          * Python
-            * Celery, Flower
       - layout: left
         title: DevOps
 #        sub_title: Qualifications (eg. BA Performing Arts)
